--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,21 +14,21 @@
 <div class="navbox">
   <div id="navlist">
     <ul>
-      <li class="li_01"><a href="about.asp"></a></li>
-      <li class="li_02"><a href="about.asp">关于梦露</a>
+      <li class="li_01"><a href="/about"></a></li>
+      <li class="li_02"><a href="/about">关于梦露</a>
         <div class="subbox">
-          <div class="item"><a href="about.asp">公司简介</a></div>
-          <div class="item"><a href="about.asp?s_id=9">企业文化</a></div>
-          <div class="item"><a href="about.asp?s_id=10">企业荣誉</a></div>
-          <div class="item"><a href="news.asp?c_id=1">MORO资讯</a></div>
+          <div class="item"><a href="/about">公司简介</a></div>
+          <div class="item"><a href="/culture">企业文化</a></div>
+          <div class="item"><a href="/honor">企业荣誉</a></div>
+          <div class="item"><a href="/news/1/list">MORO资讯</a></div>
           <div class="item"><a href="news.asp?c_id=2">社区公益</a></div>
         </div>
       </li>
-      <li class="li_02" id="nav_list"><a href="products.asp">产品展示<em></em></a>
+      <li class="li_02" id="nav_list"><a href="/products">产品展示<em></em></a>
         <div class="subbox">
-          <div class="item"><a href="products.asp?c_id=1">智能马桶盖</a>
+          <div class="item"><a href="/products/1/list">智能马桶盖</a>
             <dl>
-              <dt><a href="products_show.asp?s_id=1">ML-80</a></dt>
+              <dt><a href="/products/1">ML-80</a></dt>
               <dt><a href="products_show.asp?s_id=6">ML-86</a></dt>
               <dt><a href="products_show.asp?s_id=4">ML-86A</a></dt>
               <dt><a href="products_show.asp?s_id=3">ML-88</a></dt>
@@ -44,28 +44,28 @@
           </div>
         </div>
       </li>
-      <li class="li_02"><a href="sale.asp">全国市场一览</a>
+      <li class="li_02"><a href="/sale">全国市场一览</a>
         <div class="subbox">
-          <div class="item"><a href="sale.asp">全国实体店</a></div>
-          <div class="item"><a href="shop.asp">网上商城</a></div>
+          <div class="item"><a href="/sale">全国实体店</a></div>
+          <div class="item"><a href="/shop">网上商城</a></div>
         </div>
       </li>
-      <li class="li_02"><a href="join.asp">招商加盟</a>
+      <li class="li_02"><a href="/join">招商加盟</a>
         <div class="subbox">
-          <div class="item"><a href="join.asp">招商政策</a></div>
-          <div class="item"><a href="process.asp">招商流程</a></div>
+          <div class="item"><a href="/join">招商政策</a></div>
+          <div class="item"><a href="/process">招商流程</a></div>
         </div>
       </li>
-      <li class="li_03"><a href="service.asp">服务支持</a>
+      <li class="li_03"><a href="/service">服务支持</a>
         <div class="subbox last">
-          <div class="item"><a href="service.asp">故障报修</a></div>
-          <div class="item"><a href="faq.asp">常见问题</a></div>
-          <div class="item"><a href="down.asp">资料下载</a></div>
+          <div class="item"><a href="/service">故障报修</a></div>
+          <div class="item"><a href="/faq">常见问题</a></div>
+          <div class="item"><a href="/download">资料下载</a></div>
         </div>
       </li>
     </ul>
   </div>
-  <div class="top_logo"><a href="index.asp"></a></div>
+  <div class="top_logo"><a href="/"></a></div>
 </div>
 <div class="clear"></div>
 
@@ -92,7 +92,7 @@
  <a href="http://www.cxsled.com/" target="_blank">LED路灯</a>
    </div>
    <div class="foot_client fl">
- <a href="http://" target="_blank"><img src="upload/client/3175121204203602_large.jpg" /></a><a href="http://" target="_blank"><img src="upload/client/2049121204184435_large.jpg" /></a><a href="http://" target="_blank"><img src="upload/client/9509121114160127_large.jpg" /></a><a href="http://" target="_blank"><img src="upload/client/3485121114160108_large.jpg" /></a><a href="http://" target="_blank"><img src="upload/client/6559121114160006_large.jpg" /></a>
+ <a href="http://" target="_blank"><img src="/upload/client/3175121204203602_large.jpg" /></a><a href="http://" target="_blank"><img src="/upload/client/2049121204184435_large.jpg" /></a><a href="http://" target="_blank"><img src="/upload/client/9509121114160127_large.jpg" /></a><a href="http://" target="_blank"><img src="/upload/client/3485121114160108_large.jpg" /></a><a href="http://" target="_blank"><img src="/upload/client/6559121114160006_large.jpg" /></a>
     </div>
 </div>
 </div>
