--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -28,16 +28,16 @@
 			<div class="navtree-list">
 				<h4>新闻管理<i></i></h4>
 				<ul>
-					<li><a href="/admin/catalogs" title="文章栏目管理" target="main">新闻栏目管理</a></li>
-					<li><a href="/admin/topics" title="文章管理" target="main">新闻管理</a></li>
+					<li><a href="/admin/catalogs" title="新闻栏目管理" target="main">新闻栏目管理</a></li>
+					<li><a href="/admin/topics" title="新闻管理" target="main">新闻管理</a></li>
 					<li><a href="/admin/topics/new" title="添加新闻" target="main">添加新闻</a></li>
-					<li><a href="/admin/topics/trashes" title="文章回收站" target="main">新闻回收站</a></li>
+					<li><a href="/admin/topics/trashes" title="新闻回收站" target="main">新闻回收站</a></li>
 				</ul>
 				<h4>产品展示<i></i></h4>
 				<ul>
-					<li><a href="/admin/catalogs" title="文章栏目管理" target="main">产品分类管理</a></li>
-					<li><a href="/admin/topics/trashes" title="文章回收站" target="main">添加产品</a></li>
-					<li><a href="/admin/topics" title="文章管理" target="main">产品管理</a></li>
+					<li><a href="/admin/product_catalogs" title="产品分类管理" target="main">产品分类管理</a></li>
+					<li><a href="/admin/products" title="产品管理" target="main">产品管理</a></li>
+					<li><a href="/admin/products/new" title="添加产品" target="main">添加产品</a></li>
 				</ul>
 			</div>
 			<div class="navtree-list" style="display:none;">
