--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,98 +1,136 @@
-<div class="location"><a href="/" title="网站首页">首页</a><a href="/products" title="产品中心">产品中心</a><a href="<%= @product_catalog.show_url %>" title="<%= @product_catalog.name %>"><%= @product_catalog.name %></a><span><%= @product.title %></span></div>
-  <div class="clear"></div>
-  <div class="content_box">
-    <div class="con_left">
-      <div class="pro_pic">
-        <div id="banner_pic">	  
-	  <a href="javascript:;" class="banner_img" title="ML80-侧面图" style="background:url(upload/productszu/51291211141542251_big.jpg) no-repeat center top;"></a>
-	  <a href="javascript:;" class="banner_img" title="ML-80打开图" style="background:url(upload/productszu/51291211141542252_big.jpg) no-repeat center top;"></a>
-	  <a href="javascript:;" class="banner_img" title="ML-80正面图" style="background:url(upload/productszu/51291211141542253_big.jpg) no-repeat center top;"></a>
-	  <a href="javascript:;" class="banner_img" title="ML-80细节图" style="background:url(upload/productszu/51291211141542254_big.jpg) no-repeat center top;"></a>
-	  <div class="banner_num">
-	    <a href="javascript:;"><img src="upload/productszu/51291211141542251_small.jpg" /></a>
-	    <a href="javascript:;"><img src="upload/productszu/51291211141542252_small.jpg" /></a>
-	    <a href="javascript:;"><img src="upload/productszu/51291211141542253_small.jpg" /></a>
-	    <a href="javascript:;"><img src="upload/productszu/51291211141542254_small.jpg" /></a>
-	  </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="con_right">
-      <div class="pro_show">
-        <div class="title">
-          <ul>
-            <li class="curr">规格参数</li>
-            <li>功能特点</li>
-            <li>说明书下载</li>
-          </ul>
-        </div>
-        <div class="pro_content">
-          <div class="jScrollbar tab" id="jScroll">
-            <div class="jScrollbar_mask">
-              <!--规格-->
-              <div class="guige">
-                <ul>
-                	<li>
-						<div class="label">型号：</div>
-						<div class="cont"><%= @product.title %></div>
-					</li>
-            	<% if !@product.specifications.blank? %>
-					<% @specifications = JSON.parse(@product.specifications) %>
-					<% @specifications.each do |k, v| %>
-					<li>
-						<div class="label"><%= k %>：</div>
-						<div class="cont"><%= v %></div>
-					</li>
-					<% end %>
-				<% end %>
-                </ul>
-              </div>
-            </div>
-            <div class="clear"></div>
-          </div>
-          <div class="jScrollbar tab" id="jScroll" style="z-index:-1">
-            <div class="jScrollbar_mask">
-              <!--功能参数-->
-              <div class="gongneng">
-                <ul>
-                  <li><div class="pic"><img src="upload/products_gn/1593121204220007_small.jpg" /></div><div>便后清洁：温水除菌强力冲洗，干净舒畅不留脏污。经加热的温水，由专用喷头喷出进行集中和不同水压的便后臀部清洗，干净、舒适，有效预防各类疾病。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/8684121206142012_small.jpg" /></div><div>暖风烘干：可调温度暖风吹干，温柔清爽倍感呵护。温暖舒适的烘干气流，符合人体工学的风压设计，令清洗后的臀部恢复干爽。风温在40-60℃之间，多档可调，任你自由选择。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/1403121206142029_small.jpg" /></div><div>女性清洗：专用喷头柔水清洗，预防炎症远离痔疮。由女性专用喷头喷出较大面积的柔和温水进行清洗，日常及经期更能保持下身清洁和抑菌作用，有效防止交叉感染。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/5540121206142103_small.jpg" /></div><div>抗菌加温：抗菌材质智能恒温，健康卫生舒适宜人。座圈采用高级抗菌树脂材料，有效抑制细菌的繁殖再生！电热膜技术给座圈加热供暖，即使寒冬，也可尽享马桶的额“温情”。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/7086121206142136_small.jpg" /></div><div>通便保健：辅助保健按摩水疗，缓解便秘痔疮苦恼。对于便秘或有痔疮的人群，专有的通便喷头可以强劲的水流对肛门进行冲洗，实现润肠、按摩作用，使排便变得更轻松。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/7818121206142246_small.jpg" /></div><div>喷头自洁：喷管、喷头在伸出及复位时，均有清水自洁自身，避免细菌交叉感染。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/5507121206142210_small.jpg" /></div><div>自动除臭：活性炭强力去异味，清新空气美化环境。采用高科技自动除臭滤芯，及时有效的清除马桶内的异味，使正在使用或下次使用的人免受异味侵扰。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/4188121206142632_small.jpg" /></div><div>净化过滤：内设节水过滤装置，有效过滤掉自来水中的杂质，省水省电保证水质。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/9185121206142355_small.jpg" /></div><div>水温调节：四档调温，常温，低温35℃，中温38℃，高温41℃，可任意选择。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/8002121206142659_small.jpg" /></div><div>阻尼缓降：特有物理阻尼缓降技术，有效保证座圈起放柔和，避免噪声，延长使用寿命。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/9584121206142421_small.jpg" /></div><div>智能节电：在不使用时，MORO智能座便器自动进入休眠节电状态，不会消耗多余电量。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/7992121206142618_small.jpg" /></div><div>一键转换：只需一个按键，冲洗30秒之后自动转入烘干，烘干2分50秒之后，自动结束操作，方便快捷。</div></li>
-                  <li><div class="pic"><img src="upload/products_gn/5159121206142847_small.jpg" /></div><div>安全保护：内设防漏电保护、水箱防干烧、防超温等多重安全保护系统，为您的安全使用保驾护航。</div></li>
-
-                </ul>
-              </div>
-            </div>
-            <div class="clear"></div>
-          </div>
-          <div class="down tab" style="z-index:-1;">
-
-		  </div>
-        </div>
-      </div>
-    </div>
+<div class="location">
+	<a href="/" title="网站首页">首页</a><a href="/products" title="产品中心">产品中心</a><a href="<%= @product_catalog.show_url %>" title="<%= @product_catalog.name %>"><%= @product_catalog.name %></a><span><%= @product.title %></span>
+</div>
+<div class="clear"></div>
+<div class="content_box">
+	<div class="con_left">
+		<div class="pro_pic">
+			<div id="banner_pic">
+				<a href="javascript:;" class="banner_img" title="ML80-侧面图" style="background:url(upload/productszu/51291211141542251_big.jpg) no-repeat center top;"></a>
+				<a href="javascript:;" class="banner_img" title="ML-80打开图" style="background:url(upload/productszu/51291211141542252_big.jpg) no-repeat center top;"></a>
+				<a href="javascript:;" class="banner_img" title="ML-80正面图" style="background:url(upload/productszu/51291211141542253_big.jpg) no-repeat center top;"></a>
+				<a href="javascript:;" class="banner_img" title="ML-80细节图" style="background:url(upload/productszu/51291211141542254_big.jpg) no-repeat center top;"></a>
+				<div class="banner_num">
+					<a href="javascript:;"><img src="upload/productszu/51291211141542251_small.jpg" /></a>
+					<a href="javascript:;"><img src="upload/productszu/51291211141542252_small.jpg" /></a>
+					<a href="javascript:;"><img src="upload/productszu/51291211141542253_small.jpg" /></a>
+					<a href="javascript:;"><img src="upload/productszu/51291211141542254_small.jpg" /></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="con_right">
+		<div class="pro_show">
+			<div class="title">
+				<ul>
+					<li class="curr">规格参数</li>
+					<li>功能特点</li>
+					<li>说明书下载</li>
+				</ul>
+			</div>
+			<div class="pro_content">
+				<div class="jScrollbar tab" id="jScroll">
+					<div class="jScrollbar_mask">
+						<!--规格-->
+						<div class="guige">
+							<ul>
+								<li>
+									<div class="label">
+										型号：
+									</div>
+									<div class="cont">
+										<%= @product.title %>
+									</div>
+								</li>
+								<% if !@product.specifications.blank? %>
+								<% @specifications = JSON.parse(@product.specifications) %>
+								<% @specifications.each do |k, v| %>
+								<li>
+									<div class="label">
+										<%= k %>：
+									</div>
+									<div class="cont">
+										<%= v %>
+									</div>
+								</li>
+								<% end %>
+								<% end %>
+							</ul>
+						</div>
+					</div>
+					<div class="clear"></div>
+				</div>
+				<div class="jScrollbar tab" id="jScroll" style="z-index:-1">
+					<div class="jScrollbar_mask">
+						<!--功能参数-->
+						<div class="gongneng">
+							<ul>
+								<% @product_features.each do |feature| %>
+								<li>
+									<div class="pic"><img src="<%= feature.img_url %>" />
+									</div>
+									<div>
+										<%= feature.title %>：<%= feature.info %>
+									</div>
+								</li>
+								<% end %>
+							</ul>
+						</div>
+					</div>
+					<div class="clear"></div>
+				</div>
+				<div class="down tab" style="z-index:-1;"></div>
+			</div>
+		</div>
+	</div>
 	<div class="clear"></div>
 	<div class="pro_cookie mt20">
-	  <h2><a href="/clear_cookie/<%= @product.id %>" class="fr">清空浏览列表</a>您浏览过的产品列表</h2>
-	  <div class="contact">
-	    <a href="/shop" class="buy"></a>
-		<a target="_blank" href="http://amos.alicdn.com/msg.aw?v=2&uid=%E4%B8%8A%E6%B5%B7%E6%96%8C%E6%B4%81%E5%95%86%E8%B4%B8&site=cntaobao&s=1&charset=utf-8" class="lx"></a>
-	  </div>
-	  <ul>
-	  	<% session[:products].each_with_index do |product_id, i| %>
-	  	<% product = Product.find(product_id) %>
-	    <li<% if (i+1) % 3 == 0 %> class="last"<% end%>><a href="<%= product.show_url %>" class="pic" title="<%= product.title %>"><img src="<%= product.cover %>" alt="<%= product.title %>"/></a></li>
-	    <% end %>
-	  </ul>
+		<h2><a href="/clear_cookie/<%= @product.id %>" class="fr">清空浏览列表</a>您浏览过的产品列表</h2>
+		<div class="contact">
+			<a href="/shop" class="buy"></a>
+			<a target="_blank" href="http://amos.alicdn.com/msg.aw?v=2&uid=%E4%B8%8A%E6%B5%B7%E6%96%8C%E6%B4%81%E5%95%86%E8%B4%B8&site=cntaobao&s=1&charset=utf-8" class="lx"></a>
+		</div>
+		<ul>
+			<% session[:products].each_with_index do |product_id, i| %>
+			<% product = Product.find(product_id) %>
+			<li<% if (i+1) % 3 == 0 %> class="last"<% end%>>
+				<a href="<%= product.show_url %>" class="pic" title="<%= product.title %>"><img src="<%= product.cover %>" alt="<%= product.title %>"/></a>
+			</li>
+			<% end %>
+		</ul>
 	</div>
-  </div>
+</div>
+<script type="text/javascript" src="/assets/jquery.soChange.js"></script>
+<script type="text/javascript" src="/assets/jScrollbar.jquery.js"></script>
+<script type="text/javascript">
+$(function(){
+	//TAB切换
+	$("div.pro_show .title li").hover(function(){
+		$("div.pro_show .title li").removeClass("curr");
+		$("div.pro_content .tab").css('z-index', '-1');
+		$(this).addClass("curr");
+		$("div.pro_content .tab:eq("+$(this).index()+")").css('z-index', '10');
+	});
+	
+	//滚动条
+	$('.jScrollbar').jscroll({
+		W: "5px"//设置滚动条宽度
+		, Bg: "#f1f1f1"
+		, Bar: {
+			Bd: {
+				Out: "#909090",
+				Hover: '#909090'
+			}
+			, Bg: {
+				Out: "#909090",
+				Hover: "#909090",
+				Focus: "#909090"
+			}
+		}//设置滚动条滚轴背景：鼠标离开(默认)，经过，点击
+		, Btn: {
+			btn:false
+		}
+		, Fn: function(){}//滚动时候触发的方法
+	});
+});
+</script>
