--- a/app/views/admin/product_features/new.html.erb
+++ b/app/views/admin/product_features/new.html.erb
@@ -1,20 +1,1 @@
-<div class="nav">
-	<div class="list-opts">
-		<div class="nav-links">
-			<a href="/admin/products/<%= @product.id %>/product_features"><%= @product.title %> 功能特点</a>
-			<a href="/admin/products/<%= @product.id %>/product_features/new">添加功能特点</a>
-		</div>
-	</div>
-</div>
-<div class="main">
-<%= form_for [:admin, @product, @product_feature], :html => {:multipart => true} do |f| %>
-<table class="newtable">
-	<thead>
-		<tr>
-			<th colspan="2"><%= @product.title %> 添加功能特点</th>
-		</tr>
-	</thead>
-	<%= render :partial => 'form', :locals => { :f => f } %>
-</table>
-<% end %>
-</div>
+<%= render :partial => 'form', :locals => { :t => "添加" } %>
