--- a/app/views/admin/product_features/_form.html.erb
+++ b/app/views/admin/product_features/_form.html.erb
@@ -1,4 +1,20 @@
-
+<%= javascript_include_tag "kindeditor" %>
+<div class="nav">
+	<div class="list-opts">
+		<div class="nav-links">
+			<a href="/admin/products/<%= @product.id %>/product_features"><%= @product.title %> 功能特点</a>
+			<a href="/admin/products/<%= @product.id %>/product_features/new">添加功能特点</a>
+		</div>
+	</div>
+</div>
+<div class="main">
+<%= form_for [:admin, @product, @product_feature], :html => {:multipart => true} do |f| %>
+<table class="newtable">
+	<thead>
+		<tr>
+			<th colspan="2"><%= @product.title %> <%= t %>功能特点</th>
+		</tr>
+	</thead>
 	<tbody>
 		<tr>
 			<td colspan="2" class="blank"></td>
@@ -11,8 +27,10 @@
 		</tr>
 		<tr>
 			<td class="data_label">图片：</td>
-			<td class="data_ipt">
-				<%= f.text_field :img_url, :style => "width:400px;" %>
+			<td>
+				<%= f.text_field :img_url, :class => "new_ipt" %>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="viewServer" id="viewServer" value="图片空间"></span>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="upload" id="upload" value="本地上传"></span>
 			</td>
 		</tr>
 		<tr>
@@ -31,3 +49,51 @@
 			<td colspan="2" class="blank"></td>
 		</tr>
 	</tbody>
+</table>
+<% end %>
+</div>
+
+<script type="text/javascript">
+//<![CDATA[
+$(function(){	
+	var editor = new KindEditor.EditorClass();
+	editor.fileManagerJson = "/file_manager_json";
+	editor.uploadJson = "/upload_img";
+	editor.extraFileUploadParams = {
+		'model_type' : 'product_feature'
+	};
+	KindEditor.loadStyle(editor.themesPath + 'default/default.css');
+	KindEditor.loadScript(editor.langPath + editor.langType + '.js');
+	
+	$('#viewServer').click(function(){
+		editor.loadPlugin('filemanager', function() {
+			editor.plugin.filemanagerDialog({
+				viewType : 'VIEW',
+				dirName : 'products_gn',
+				clickFn : function(url, title) {
+					if (editor.dialogs.length > 0) {
+						$('#product_feature_img_url').val(url);
+						editor.hideDialog();
+					}
+				}
+			});
+		});
+	});
+	
+	$('#upload').click(function(){
+		editor.loadPlugin('image', function() {
+			editor.plugin.imageDialog({
+				showRemote: false,
+				clickFn : function(url, title, width, height, border, align) {
+					$('#product_feature_img_url').val(url);
+					setTimeout(function() {
+						editor.hideDialog().focus();
+					}, 0);
+				}
+			});
+		});
+	});
+		
+});
+//]]>
+</script>
