--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,4 +1,11 @@
-
+<%= javascript_include_tag "kindeditor" %>
+<%= form_for [:admin, @product] do |f| %>
+<table class="newtable">
+	<thead>
+		<tr>
+			<th colspan="2"><%= t %></th>
+		</tr>
+	</thead>
 	<tbody>
 		<tr>
 			<td colspan="2" class="blank"></td>
@@ -22,6 +29,20 @@
 				<%= f.text_field :title, :style => "width:400px;" %>
 			</td>
 		</tr>
+		<tr>
+			<td class="data_label">图片：</td>
+			<td>
+				<%= f.text_field :cover, :class => "new_ipt" %>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="viewServer" id="viewServer" value="图片空间"></span>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="upload" id="upload" value="本地上传"></span>
+			</td>
+		</tr>
+		<tr>
+			<td class="data_label">购买地址：</td>
+			<td class="data_ipt">
+				<%= f.text_field :buy_url %>
+			</td>
+		</tr>
 		<!--tr>
 			<td class="data_label">规格参数：</td>
 			<td class="data_ipt">
@@ -38,3 +59,50 @@
 			<td colspan="2" class="blank"></td>
 		</tr>
 	</tbody>
+</table>
+<% end %>
+
+<script type="text/javascript">
+//<![CDATA[
+$(function(){	
+	var editor = new KindEditor.EditorClass();
+	editor.fileManagerJson = "/file_manager_json";
+	editor.uploadJson = "/upload_img";
+	editor.extraFileUploadParams = {
+		'model_type' : 'product'
+	};
+	KindEditor.loadStyle(editor.themesPath + 'default/default.css');
+	KindEditor.loadScript(editor.langPath + editor.langType + '.js');
+	
+	$('#viewServer').click(function(){
+		editor.loadPlugin('filemanager', function() {
+			editor.plugin.filemanagerDialog({
+				viewType : 'VIEW',
+				dirName : 'products',
+				clickFn : function(url, title) {
+					if (editor.dialogs.length > 0) {
+						$('#product_cover').val(url);
+						editor.hideDialog();
+					}
+				}
+			});
+		});
+	});
+	
+	$('#upload').click(function(){
+		editor.loadPlugin('image', function() {
+			editor.plugin.imageDialog({
+				showRemote: false,
+				clickFn : function(url, title, width, height, border, align) {
+					$('#product_cover').val(url);
+					setTimeout(function() {
+						editor.hideDialog().focus();
+					}, 0);
+				}
+			});
+		});
+	});
+		
+});
+//]]>
+</script>
