--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -67,7 +67,7 @@
 $(function(){	
 	var editor = new KindEditor.EditorClass();
 	editor.fileManagerJson = "/file_manager_json";
-	editor.uploadJson = "/upload_img";
+	editor.uploadJson = "/upload_asset";
 	editor.extraFileUploadParams = {
 		'model_type' : 'product'
 	};
