--- a/app/views/admin/product_files/_form.html.erb
+++ b/app/views/admin/product_files/_form.html.erb
@@ -2,17 +2,17 @@
 <div class="nav">
 	<div class="list-opts">
 		<div class="nav-links">
-			<a href="/admin/products/<%= @product.id %>/product_features"><%= @product.title %> 功能特点</a>
-			<a href="/admin/products/<%= @product.id %>/product_features/new">添加功能特点</a>
+			<a href="/admin/products/<%= @product.id %>/product_files"><%= @product.title %> 资料</a>
+			<a href="/admin/products/<%= @product.id %>/product_files/new">添加资料</a>
 		</div>
 	</div>
 </div>
 <div class="main">
-<%= form_for [:admin, @product, @product_feature], :html => {:multipart => true} do |f| %>
+<%= form_for [:admin, @product, @product_file], :html => {:multipart => true} do |f| %>
 <table class="newtable">
 	<thead>
 		<tr>
-			<th colspan="2"><%= @product.title %> <%= t %>功能特点</th>
+			<th colspan="2"><%= @product.title %> <%= t %>资料</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -26,17 +26,20 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">图片：</td>
-			<td>
-				<%= f.text_field :img_url, :class => "new_ipt" %>
-				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="viewServer" id="viewServer" value="图片空间"></span>
-				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="upload" id="upload" value="本地上传"></span>
+			<td class="data_label">类型：</td>
+			<td class="data_ipt">
+				<select name="product_file[data_type]">
+					<option value="drawings">产品图纸</option>
+					<option value="doc">说明书</option>
+				</select>
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">内容：</td>
-			<td class="data_ipt">
-				<%= f.text_area :info, :style => "width:400px;height:120px;" %>
+			<td class="data_label">文件地址：</td>
+			<td>
+				<%= f.text_field :data_url, :class => "new_ipt" %>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="viewServer" id="viewServer" value="图片空间"></span>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="upload" id="upload" value="本地上传"></span>
 			</td>
 		</tr>
 		<tr>
@@ -58,9 +61,9 @@
 $(function(){	
 	var editor = new KindEditor.EditorClass();
 	editor.fileManagerJson = "/file_manager_json";
-	editor.uploadJson = "/upload_asset";
+	editor.uploadJson = "/upload_img";
 	editor.extraFileUploadParams = {
-		'model_type' : 'product_feature'
+		'model_type' : 'product_file'
 	};
 	KindEditor.loadStyle(editor.themesPath + 'default/default.css');
 	KindEditor.loadScript(editor.langPath + editor.langType + '.js');
@@ -72,7 +75,7 @@ $(function(){
 				dirName : 'products_gn',
 				clickFn : function(url, title) {
 					if (editor.dialogs.length > 0) {
-						$('#product_feature_img_url').val(url);
+						$('#product_file_img_url').val(url);
 						editor.hideDialog();
 					}
 				}
@@ -85,7 +88,7 @@ $(function(){
 			editor.plugin.imageDialog({
 				showRemote: false,
 				clickFn : function(url, title, width, height, border, align) {
-					$('#product_feature_img_url').val(url);
+					$('#product_file_img_url').val(url);
 					setTimeout(function() {
 						editor.hideDialog().focus();
 					}, 0);
