--- a/app/views/admin/product_imgs/_form.html.erb
+++ b/app/views/admin/product_imgs/_form.html.erb
@@ -49,7 +49,7 @@
 $(function(){	
 	var editor = new KindEditor.EditorClass();
 	editor.fileManagerJson = "/file_manager_json";
-	editor.uploadJson = "/upload_img";
+	editor.uploadJson = "/upload_asset";
 	editor.extraFileUploadParams = {
 		'model_type' : 'product_img'
 	};
