--- a/app/views/admin/product_files/_form.html.erb
+++ b/app/views/admin/product_files/_form.html.erb
@@ -29,8 +29,8 @@
 			<td class="data_label">类型：</td>
 			<td class="data_ipt">
 				<select name="product_file[data_type]">
-					<option value="drawings">产品图纸</option>
-					<option value="doc">说明书</option>
+					<option value="drawing"<% if @product_file.data_type == "drawing" %> selected="selected"<% end %>>产品图纸</option>
+					<option value="doc"<% if @product_file.data_type == "doc" %> selected="selected"<% end %>>说明书</option>
 				</select>
 			</td>
 		</tr>
@@ -38,8 +38,8 @@
 			<td class="data_label">文件地址：</td>
 			<td>
 				<%= f.text_field :data_url, :class => "new_ipt" %>
-				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="viewServer" id="viewServer" value="图片空间"></span>
-				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="upload" id="upload" value="本地上传"></span>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="upload" id="upload" value="上传"></span>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button" name="viewServer" id="viewServer" value="文件空间"></span>
 			</td>
 		</tr>
 		<tr>
@@ -61,21 +61,25 @@
 $(function(){	
 	var editor = new KindEditor.EditorClass();
 	editor.fileManagerJson = "/file_manager_json";
-	editor.uploadJson = "/upload_img";
+	editor.uploadJson = "/upload_asset";
 	editor.extraFileUploadParams = {
 		'model_type' : 'product_file'
 	};
+	editor.afterUpload = function(url, data, name){
+		$('#product_file_data_url').val(url);
+		editor.hideDialog().focus();
+	}
 	KindEditor.loadStyle(editor.themesPath + 'default/default.css');
 	KindEditor.loadScript(editor.langPath + editor.langType + '.js');
 	
 	$('#viewServer').click(function(){
 		editor.loadPlugin('filemanager', function() {
 			editor.plugin.filemanagerDialog({
-				viewType : 'VIEW',
-				dirName : 'products_gn',
+				viewType : 'LIST',
+				dirName : 'editor/file',
 				clickFn : function(url, title) {
 					if (editor.dialogs.length > 0) {
-						$('#product_file_img_url').val(url);
+						$('#product_file_data_url').val(url);
 						editor.hideDialog();
 					}
 				}
@@ -84,14 +88,11 @@ $(function(){
 	});
 	
 	$('#upload').click(function(){
-		editor.loadPlugin('image', function() {
-			editor.plugin.imageDialog({
-				showRemote: false,
-				clickFn : function(url, title, width, height, border, align) {
-					$('#product_file_img_url').val(url);
-					setTimeout(function() {
-						editor.hideDialog().focus();
-					}, 0);
+		editor.loadPlugin('insertfile', function() {
+			editor.plugin.fileDialog({
+				clickFn : function(url, title) {
+					$('#product_file_data_url').val(url);
+					editor.hideDialog().focus();
 				}
 			});
 		});
