--- a/app/views/services/download.html.erb
+++ b/app/views/services/download.html.erb
@@ -1,60 +1,72 @@
 <!--图片弹出切换开始-->
-  <link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox-1.3.4.css">
-  <script type="text/javascript" src="fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-  <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-  <!--图片弹出切换结束-->
-  <script type="text/javascript"> 
-$(document).ready(function() {
-//图片点击弹出
-  $("#cal_pic a[rel=cal_pic]").fancybox({
-      'transitionIn': 'elastic',
-      'transitionOut': 'elastic',
-      'titlePosition': 'over',
-      'titleFormat': function(title, currentArray, currentIndex, currentOpts) {
-        return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title: '') + '</span>';
-      }
+<link rel="stylesheet" type="text/css" href="/assets/fancybox/jquery.fancybox-1.3.4.css">
+<script type="text/javascript" src="/assets/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+<script type="text/javascript" src="/assets/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<!--图片弹出切换结束-->
+<script type="text/javascript">
+	$(document).ready(function() {
+		//图片点击弹出
+		$("#cal_pic a[rel=cal_pic]").fancybox({
+			'transitionIn' : 'elastic',
+			'transitionOut' : 'elastic',
+			'titlePosition' : 'over',
+			'titleFormat' : function(title, currentArray, currentIndex, currentOpts) {
+				return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+			}
+		});
 	});
-});
+
 </script>
-  <div class="location"><a href="index.asp">首页</a><a href="service.asp">服务支持</a><span>资料下载</span></div>
-  <div class="clear"></div>
-  <div class="content_box faq">
-    <div class="ser_action">
-	  <div class="faq_title">
-	    <h1>资料下载</h1>
-	  </div>
-	  <div class="down_list">
-	    <div class="down_title">
-		  <dl>
-		    <dt>智能马桶盖：</dt>
-			<dd><a href="down.asp?s_id=1" class="curr">ML-80</a><a href="down.asp?s_id=6">ML-86</a><a href="down.asp?s_id=4">ML-86A</a><a href="down.asp?s_id=3">ML-88</a><a href="down.asp?s_id=2">ML-88A</a><a href="down.asp?s_id=8">ML-100</a></dd>
-		  </dl>
-		  <dl>
-		    <dt>智能一体机：</dt>
-			<dd><a href="down.asp?s_id=9">ML-208</a><a href="down.asp?s_id=10">ML-228</a></dd>
-		  </dl>
-
+<div class="location">
+	<a href="/">首页</a><a href="/service">服务支持</a><span>资料下载</span>
+</div>
+<div class="clear"></div>
+<div class="content_box faq">
+	<div class="ser_action">
+		<div class="faq_title">
+			<h1>资料下载</h1>
 		</div>
-	    <div class="down_pic">
-		  <h2>产品图片集锦</h2>
-		  <div id="cal_pic">
-		    <a href="upload/productszu/51291211141542251_large.jpg" rel="cal_pic" title="ML80-侧面图"><img src="upload/productszu/51291211141542251_in.jpg"/></a>
-		    <a href="upload/productszu/51291211141542252_large.jpg" rel="cal_pic" title="ML-80打开图"><img src="upload/productszu/51291211141542252_in.jpg"/></a>
-		    <a href="upload/productszu/51291211141542253_large.jpg" rel="cal_pic" title="ML-80正面图"><img src="upload/productszu/51291211141542253_in.jpg"/></a>
-		    <a href="upload/productszu/51291211141542254_large.jpg" rel="cal_pic" title="ML-80细节图" class="last"><img src="upload/productszu/51291211141542254_in.jpg"/></a>
-
-		  </div>
+		<div class="down_list">
+			<div class="down_title">
+				<% @product_catalogs.each do |catalog| %>
+				<dl>
+					<dt><%= catalog.name %>：</dt>
+					<dd>
+						<% catalog.products.each do |product| %>
+						<a href="/download/<%= product.id %>"<% if product.id == @product.id %> class="curr"<% end %>><%= product.title %></a>
+						<% end %>
+					</dd>
+				</dl>
+				<% end %>
+			</div>
+			<div class="down_pic">
+				<h2>产品图片集锦</h2>
+				<div id="cal_pic">
+					<% @product_imgs.each_with_index do |product_img, i| %>
+					<a href="<%= product_img.addr %>" rel="cal_pic" title="<%= product_img.title %>"<% if (i + 1) % 4 == 0 %> class="last"<% end %>><img src="<%= product_img.addr %>"/></a>
+					<% end %>
+				</div>
+			</div>
+			<div class="down_pdf">
+				<h2>产品图纸</h2>
+				<% if @product_drawings.length > 0 %>
+				<% @product_drawings.each do |f| %>
+				<a href="<%= f.data_url %>" target="_blank" class="download"><%= f.title %></a>
+				<% end %>
+				<% else %>
+				<img src="/assets/qidai_1.png" class="mt10"/>
+				<% end %>
+			</div>
+			<div class="down_pdf">
+				<h2>说明书</h2>
+				<% if @product_docs.length > 0 %>
+				<% @product_docs.each do |f| %>
+				<a href="<%= f.data_url %>" target="_blank" class="download"><%= f.title %></a>
+				<% end %>
+				<% else %>
+				<img src="/assets/qidai_2.png" class="mt10"/>
+				<% end %>
+			</div>
 		</div>
-	    <div class="down_pdf">
-		  <h2>产品图纸</h2>
-		  <img src="images/qidai_1.png" class="mt10"/>
-
-		</div>
-		<div class="down_pdf">
-		  <h2>说明书</h2>
-		  <img src="images/qidai_2.png" class="mt10"/>
-
-		</div>
-	  </div>
 	</div>
-  </div>
+</div>
