--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -48,9 +48,9 @@
 				</ul>
 				<h4>内容管理<i></i></h4>
 				<ul>
-					<li><a href="/admin/ads" title="广告管理" target="main">实体店信息</a></li>
+					<li><a href="/admin/sales" title="实体店信息" target="main">实体店信息</a></li>
 					<li><a href="/admin/guestbooks" title="留言薄" target="main">故障保修</a></li>
-					<li><a href="/admin/guestbooks" title="常见问题" target="main">常见问题</a></li>
+					<li><a href="/admin/faqs" title="常见问题" target="main">常见问题</a></li>
 					<li><a href="/admin/friendlinks" title="友情链接" target="main">友情链接</a></li>
 				</ul>
 			</div>
