--- a/app/views/admin/topics/new.html.erb
+++ b/app/views/admin/topics/new.html.erb
@@ -1,11 +1,1 @@
-<%= javascript_include_tag "kindeditor" %>
-<%= form_for [:admin, @topic] do |f| %>
-<table class="newtable">
-	<thead>
-		<tr>
-			<th colspan="2">新增</th>
-		</tr>
-	</thead>
-	<%= render :partial => 'form', :locals => { :f => f } %>
-</table>
-<% end %>
+<%= render :partial => 'form', :locals => { :t => "新增" } %>
