--- a/app/views/services/faq.html.erb
+++ b/app/views/services/faq.html.erb
@@ -1,46 +1,48 @@
-<div class="location"><a href="/" title="网站首页">首页</a><a href="/service" title="服务支持">服务支持</a><a href="/faq" title="常见问题">常见问题</a><span>问题列表</span></div>
-  <div class="clear"></div>
-  <div class="content_box faq">
-    <div class="ser_action">
-	  <div class="faq_title">
-	    <h1>常见问题</h1>
-		<a target="_blank" href="http://amos.alicdn.com/msg.aw?v=2&uid=%E4%B8%8A%E6%B5%B7%E6%96%8C%E6%B4%81%E5%95%86%E8%B4%B8&site=cntaobao&s=1&charset=utf-8" class="wangwang"></a>
-		  <div class="so">
-			<form name="form2" method="get" action="">
-			  <input type="text" onFocus="javascript:if('请输入问题'==this.value)this.value='';" onBlur="javascript:if(''==this.value)this.value='请输入问题';" value="请输入问题" name="s_key">
-			  <button></button>
-			</form>
-		  </div>
-	  </div>
-	      <div class="faq_list">
-      <ul>
-		  <li><a href="javascript:;" title="我有些购买前的问题需要咨询？">我有些购买前的问题需要咨询？</a>
-			<div>
-<p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp; 我们建议您通过梦露淘宝网店进行售前咨询；</span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp; 您也可以拨打我们的全国客服电话 400-820-0407；</span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp; 您也可以通过新浪微博 @梦露电气 给我们留言咨询；</span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp; 当然，当地实体店去看看实物也是一个不错的选择。</span></p>			</div>
-		  </li>
-		  <li><a href="javascript:;" title="我在哪里可以买到梦露智能座便器？">我在哪里可以买到梦露智能座便器？</a>
-			<div>
-<p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 您可以选择通过梦露淘宝网店购买，您可以从网站首页找到地址；</span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 另外您还可以从全国市场一览中找到当地经销商地址。</span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;</span></p>			</div>
-		  </li>
-		  <li><a href="javascript:;" title="我将得到怎样的售前售后服务？">我将得到怎样的售前售后服务？</a>
-			<div>
-<blockquote><p><span style="font-family:Microsoft YaHei;font-size:14px;"><strong>七星超值服务&nbsp; <span style="font-family:Microsoft YaHei;font-size:14px;">用心构筑桥梁</span></strong></span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;"><br /></span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;"><strong>便捷之星</strong>：无须更换马桶，即可轻松享用<br /><strong>速度之星</strong>：免费上门安装，只需一个电话<br /><strong>诚信之星</strong>：10天免费使用，无条件退货<br /><strong>质量之星</strong>：10年使用承诺，若质量问题1年免费换新，终身维修<br /><strong>服务之星</strong>：24小时售后技术支持<br /><strong>关怀之星</strong>：专家温馨回访，传授保养方法<br /><strong>实惠之星</strong>：产品优惠升级服务</span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;"><br /></span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;">在MORO人眼里，<br />产品的品质是不懈的追求，<br />真诚的服务是我们的坚持，<br />客户的满意是唯一的标准，<br />客户的信赖永远是沉甸甸的荣耀。</span></p><p>&nbsp;</p></blockquote>			</div>
-		  </li>
-		  <li><a href="javascript:;" title="如果我的座便器出现故障应该怎么处理？">如果我的座便器出现故障应该怎么处理？</a>
-			<div>
-<p><span style="font-family:Microsoft YaHei;font-size:14px;"><strong><span style="color:black;"></span></strong></span><span style="font-family:Microsoft YaHei;font-size:14px;"><strong>智能座便器出现故障时如何解决？</strong><br /></span></p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 购入梦露智能座便器后出现问题的（非人为因素），公司一年内将免费换新！400热线电话随时畅通，一个电话，售后维护人员将第一时间为您解决困扰。安装售后一条龙，智能生活乐无忧。<br /><br />&nbsp;</span><br /><br />&nbsp;<p><span style="font-family:Microsoft YaHei;font-size:14px;"></span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;</span></p>			</div>
-		  </li>
-		  <li><a href="javascript:;" title="梦露智能座便器日常使用技巧">梦露智能座便器日常使用技巧</a>
-			<div>
-<span style="font-family:Microsoft YaHei;font-size:14px;"><strong>MORO梦露如何确保智能座便器的使用卫生?</strong><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 梦露采取了多项防范措施让您放心使用：频繁接触身体的产品部份采用抗菌合成材料制成；精心设计的喷嘴角度，清洗后的污水不会污染喷头；特设水质过滤网，保证清洗用水的干净。<br /><br /><strong>智能座便器日常清洁</strong><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 用半干的棉布清洁机器外部，包括外壳、坐盖、坐圈表面及底部；外表脏或不好清理时，可沾中性洗剂，切勿使用强性洗剂；避免强烈阳光直接射，以免产品变色。<br /><br /><strong>智能马桶盖喷嘴保养方法</strong><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 每次使用喷水功能前后，喷嘴都会进行一次严格的自我清洁功能；人工清洁时只需要在按键板上按键即可使喷管自己伸出，方便清洁；可用牙刷清洁喷嘴，每两个月清洁一次即可。<br /><br /><strong>外出保养方法</strong><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 插头断开，卸下堵头(水箱底部前端)放出水箱储水。<br /><br /><strong>智能马桶盖冬季保养方法</strong><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 冬季注意保持卫生间内的温度在3度以上，避免水箱结冰<br /><br /> </span>			</div>
-		  </li>
-		  <li><a href="javascript:;" title="梦露智能座便器常见故障排修">梦露智能座便器常见故障排修</a>
-			<div>
-<p><span style="font-family:Microsoft YaHei;font-size:14px;"><strong>我的智能座便器水箱注水太慢或不进水？</strong></span></p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 请先检查家中其他龙头的水压情况和供水管是否有问题，如水压小或无水管供水则属供水问题，须打开角阀或联系物业解决水压问题；<br /></span><p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 如确认供水正常，请进一步检查水箱中的进水阀是否有杂物阻塞，如有可先关闭角阀，拆下进水阀底部的进水接头滤网，进行简单的清洗处理。</span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;"><br /></span></p><p><span style="font-family:Microsoft YaHei;font-size:14px;"><strong>智能座便器的喷头不出水是什么原因造成的？</strong></span></p><span style="font-family:Microsoft YaHei;font-size:14px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 智能座便器喷头不出水可能有三种原因：<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1. 可能是小水泵坏了；<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2. 感应器没感应到人；<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3. 盖板电路接触不良。<br /><br />&nbsp;<br /></span>			</div>
-		  </li>
-      </ul>
-    </div>
-
-	  <div class="ser_tel mt20">如果您的问题仍未解决，欢迎使用在线咨询或者拨打全国免费服务热线<br />400-820-0407</div>
+<div class="location">
+	<a href="/" title="网站首页">首页</a><a href="/service" title="服务支持">服务支持</a><a href="/faq" title="常见问题">常见问题</a><% if !@keyword.blank? %>搜索 “<b style="color:red;"><%= @keyword %></b>” 结果<% else %><span>问题列表</span><% end %>
+</div>
+<div class="clear"></div>
+<div class="content_box faq">
+	<div class="ser_action">
+		<div class="faq_title">
+			<h1>常见问题</h1>
+			<a target="_blank" href="http://amos.alicdn.com/msg.aw?v=2&uid=%E4%B8%8A%E6%B5%B7%E6%96%8C%E6%B4%81%E5%95%86%E8%B4%B8&site=cntaobao&s=1&charset=utf-8" class="wangwang"></a>
+			<div class="so">
+				<%= form_tag "/faq" do %>
+					<input type="text" onFocus="javascript:if('请输入问题'==this.value)this.value='';" onBlur="javascript:if(''==this.value)this.value='请输入问题';" value="<% if !@keyword.blank? %><%= @keyword %><% else %>请输入问题<% end %>" name="s_key">
+					<button></button>
+				<% end %>
+			</div>
+		</div>
+		<div class="faq_list">
+			<ul>
+				<% if @faqs.length > 0 %>
+				<% @faqs.each do |faq| %>
+				<li>
+					<a href="javascript:;" title="<%= faq.title %>"><%= faq.title %></a>
+					<div><%= faq.text.to_s.html_safe %></div>
+				</li>
+				<% end %>
+				<% else %>
+				<li>没有任何内容</li>
+				<% end %>
+			</ul>
+		</div>
+		<div class="ser_tel mt20">
+			如果您的问题仍未解决，欢迎使用在线咨询或者拨打全国免费服务热线
+			<br />
+			400-820-0407
+		</div>
 	</div>
-  </div>
+</div>
+<script type="text/javascript">
+$(function(){
+	$('.faq_list li a').click(function(){
+		if($(this).parent().find('div').is(":visible")) {
+			$(this).parent().find('div').hide();
+		}else{
+			$(this).parent().find('div').show();
+		}
+	});
+});
+</script>
